Fix masonry width problem when content is too wide for some browsers

--- a/src/scss/_masonry.scss
+++ b/src/scss/_masonry.scss
@@ -9,6 +9,7 @@
 .masonry-item {
   display: flex;
   flex-direction: column;
+  min-width: 0;
 
   > * {
     flex-grow: 1;
